# bootstrapper

./: .gitignore  LICENSE  README.md  filter.sh  ng_interactive_sam.py  pred.sh  prepare_configs.py  prepare_data.py  pyproject.toml  segment.sh  setup.py  train.sh
blockwise/: 01_predict_blockwise.py  02_extract_fragments_blockwise.py  03_agglomerate_blockwise.py  04_find_segments.py  05_extract_segments_from_lut.py  06_evaluate_thresholds.py
blockwise/workers/: agglomerate_worker.py  extract_fragments_worker.py
bootstrapper/: __init__.py  auto.py  cli.py  configs.py  evaluate.py  filter.py  predict.py  prepare.py  prepare_data.py  segment.py  styles.py  train.py  utils.py  view.py
bootstrapper/data/: bbox.py  blockwise_stack.py  bounding_box_crop.py  clahe.py  convert.py  mask.py  merge.py  volumes.py
bootstrapper/eval/: compute_errors.py  compute_metrics.py  evaluate_thresholds.py
bootstrapper/gp/: __init__.py  add_2d_lsds.py  add_aff_errors.py  add_lsd_errors.py  add_obfuscated_2d_lsds.py  calc_max_padding.py  clahe_augment.py  create_labels.py  create_mask.py  custom_grow_boundary.py  custom_intensity_augment.py  defect_augment.py  expand_labels.py  gamma_augment.py  impulse_noise_augment.py  obfuscate_affs.py  obfuscate_labels.py  renumber.py  smooth_augment.py
bootstrapper/post/: __init__.py  cc.py  compute_errors.py  connected_components.py  filter_segmentation.py  mws.py  size_filter.py  watershed.py  watershed_mutex.py  ws.py
bootstrapper/run/: __init__.py  auto.py  configs.py  evaluate.py  filter.py  predict.py  prepare.py  segment.py  train.py  utils.py  view.py  volumes.py
bootstrapper/scripts/: view_ng_skeletons.py  view_snapshot.py
bootstrapper/utils/: __init__.py  bbox.py  blockwise_mask.py  calc_max_padding.py  clahe.py  configs.py  convert.py  make_configs.py  make_mask.py  make_volumes.py  make_zarr.py  mask.py  outlier_filter.py  scale_pyramid.py  size_filter.py  view_snapshot.py  volumes.py
configs/: predict.yaml  train.yaml
data/: blockwise_stack.py  bounding_box_crop.py  filter_and_make_masks.py  filter_labels.py  make_2d_image_zarr.py  make_2d_training_zarr.py  make_3d_image_zarr.py  make_3d_training_zarr.py  make_3d_zarr_array.py  make_object_mask.py  make_raw_mask.py  mask_array.py  scale_pyramid.py  simple_size_filter.py  strict_filter.py  upscale_seg.py  view_ng_skeletons.py
example_run/: filter.yaml  predict.yaml  segment.yaml  target_volume.yaml  train.yaml  train_2d_mtlsd.yaml  train_3d_lsd.yaml  train_synthetic_affs.yaml
examples/cremi/: README.md  download.py  z30_painting.tif
models/2d_affs/: model.py  predict.py  train.py  utils.py
models/2d_affs_to_3d_affs/: net_config.json  predict.py  train.py  utils.py
models/2d_lsd/: model.py  predict.py  train.py  unet.py  utils.py
models/2d_lsd_to_3d_affs/: net_config.json  train.py
models/2d_model/: config.json  model.py  predict.py  train.py  utils.py  view_snapshot.py
models/2d_model_3ch/: config.json  train.py  utils.py
scripts/: 02_extract_fragments_blockwise.py  03_agglomerate_blockwise.py  05_extract_segments_from_lut.py  06_evaluate_thresholds.py  add_lsd_errors.py  compute_errors.py  compute_lsd_errors.py  evaluate_thresholds.py  filter_blockwise.py  filter_segmentation.py  lsd_error_stats.py  view_2d_snapshot.py  view_3d_snapshot.py  view_ng_skeletons.py  view_snapshot.py
(+148 files in other folders)
