[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "bootstrapper"
version = "0.2.0"
description = "Bootstrap volume segmentations from sparse annotations"
readme = "README.md"
authors = [
    {name = "Vijay Venu Thiyagarajan", email = "vvenu@utexas.edu"}
]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "torch",
    "zarr",
    "numba",
    "neuroglancer",
    "tensorboardx",
    "gunpowder>=1.4",
    "daisy>=1.2",
    "lsds @ git+https://github.com/yajivunev/lsd",
    "funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch",
    "funlib.show.neuroglancer @ git+https://github.com/funkelab/funlib.show.neuroglancer",
    "funlib.segment @ git+https://github.com/funkelab/funlib.segment",
    "funlib.evaluate @ git+https://github.com/yajivunev/funlib.evaluate",
    "waterz @ git+https://github.com/mpinb/waterz",
    "mwatershed @ git+https://github.com/pattonw/mwatershed",
    "volara @ git+https://github.com/e11bio/volara",
    "click",
]

[project.urls]
Homepage = "https://github.com/ucsdmanorlab/bootstrapper"

[project.scripts]
bs = "bootstrapper.cli:cli"
